--- a/META.yml
+++ b/META.yml
@@ -1,28 +1,25 @@
----
-abstract: unknown
-author:
-  - unknown
-build_requires:
-  ExtUtils::MakeMaker: 0
+--- #YAML:1.0
+name:               Devel-SizeMe
+version:            0.05
+abstract:           ~
+author:  []
+license:            perl
+distribution_type:  module
 configure_requires:
-  ExtUtils::MakeMaker: 0
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120630'
-license: perl
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
-name: Devel-SizeMe
-no_index:
-  directory:
-    - t
-    - inc
+    ExtUtils::MakeMaker:  0
 requires:
-  Devel::Dwarn: 0
-  HTML::Entities: 0
-  JSON::XS: 0
-  ORLite: 0
-  Test::More: 0
-  XSLoader: 0
-  perl: 5.005
-version: 0.04
+    Devel::Dwarn:    0
+    HTML::Entities:  0
+    JSON::XS:        0
+    ORLite:          0
+    perl:            5.005
+    Test::More:      0
+    XSLoader:        0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
