--- a/META.yml
+++ b/META.yml
@@ -19,6 +19,7 @@ no_index:
     - inc
 requires:
   DBD::SQLite: 1.37
+  DBI: 0
   Devel::Dwarn: 0
   HTML::Entities: 0
   JSON::XS: 0
@@ -28,4 +29,4 @@ requires:
   perl: 5.008
 resources:
   homepage: https://github.com/timbunce/devel-sizeme
-version: 0.11
+version: 0.12
