Import of TIMB/Devel-SizeMe-0.16 from CPAN.
gitpan-cpan-distribution: Devel-SizeMe
gitpan-cpan-version:      0.16
gitpan-cpan-path:         TIMB/Devel-SizeMe-0.16.tar.gz
gitpan-cpan-author:       TIMB
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -26,7 +26,8 @@ requires:
   Moo: 1.000007
   Test::More: 0.98
   XSLoader: 0
+  autodie: 2.12
   perl: 5.008
 resources:
   homepage: https://github.com/timbunce/devel-sizeme
-version: 0.15
+version: 0.16
